added lap feature

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
+    <nav class="sidebar">
+      <ul class="lap-list">
+        <li class="lap-li">
+          <!-- <div class="lap__details">
+            <span class="lap__icon">🏃‍♂️</span>
+            <span class="lap__time">00:05:10</span>
+          </div> -->
+        </li>
+      </ul>
+    </nav>
     <div class="stopwatch-container">
       <h2 class="title">STOP WATCH</h2>
       <div class="timer">
@@ -19,6 +29,7 @@
         <button class="btn start">Start</button>
         <button class="btn stop">Stop</button>
         <button class="btn reset">Reset</button>
+        <button class="btn lap">Lap</button>
       </div>
     </div>
   </body>
