Added sidebar container feature

--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STOP WATCH</title>
     <link rel="stylesheet" href="./style.css" />
+
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <nav class="sidebar">
-      <ul class="lap-list">
-        <li class="lap-li">
+    <div class="sidebar-container show-sidebar">
+      <div class="toggle-icon">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/2976/2976215.png"
+          alt="toggle icon"
+        />
+      </div>
+      <div class="sidebar">
+        <ul class="laps-list">
           <!-- <div class="lap__details">
-            <span class="lap__icon">🏃‍♂️</span>
-            <span class="lap__time">00:05:10</span>
-          </div> -->
-        </li>
-      </ul>
-    </nav>
+              <span class="lap__number">🏃‍♂️</span>
+              <span class="lap__time">00:05:10</span>
+            </div> -->
+        </ul>
+      </div>
+    </div>
+
     <div class="stopwatch-container">
       <h2 class="title">STOP WATCH</h2>
       <div class="timer">
