added random quotes
added random  quotes using api

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         </ul>
       </div>
     </div>
-
+    <div class="quotes-container">
+      <!-- <div class="quote">
+        <p class="quote-text">${quote}</p>
+        <p class="quote-author">- ${author}</p>
+      </div> -->
+    </div>
     <div class="stopwatch-container">
       <h2 class="title">STOP WATCH</h2>
       <div class="timer">
