Added Stopwatch gif

--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
         <button class="btn lap">Lap</button>
       </div>
     </div>
+    <div>
+      <img
+        class="ticking-clock hidden"
+        src="https://media.tenor.com/dJTorKpwPTMAAAAi/clock-ticking.gif"
+      />
+    </div>
   </body>
 </html>
